// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.Spin default 1`] = `
<div
  class="arco-spin"
>
  <span
    class="arco-spin-icon"
  >
    <svg
      aria-hidden="true"
      class="arco-icon arco-icon-loading"
      fill="none"
      focusable="false"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
    >
      <path
        d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
      />
    </svg>
  </span>
</div>
`;

exports[`ConfigProvider componentConfig.Spin set className globally 1`] = `
<div
  class="arco-spin global-default-class"
>
  <span
    class="arco-spin-icon"
  >
    <svg
      aria-hidden="true"
      class="arco-icon arco-icon-loading"
      fill="none"
      focusable="false"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
    >
      <path
        d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
      />
    </svg>
  </span>
</div>
`;

exports[`ConfigProvider componentConfig.Spin set className globally and component set className itself. 1`] = `
<div
  class="arco-spin component-class"
>
  <span
    class="arco-spin-icon"
  >
    <svg
      aria-hidden="true"
      class="arco-icon arco-icon-loading"
      fill="none"
      focusable="false"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
    >
      <path
        d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
      />
    </svg>
  </span>
</div>
`;

exports[`ConfigProvider componentConfig.Spin set data-* property 1`] = `
<div
  class="arco-spin"
  data-test-name="Spin"
>
  <span
    class="arco-spin-icon"
  >
    <svg
      aria-hidden="true"
      class="arco-icon arco-icon-loading"
      fill="none"
      focusable="false"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
    >
      <path
        d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
      />
    </svg>
  </span>
</div>
`;
